kubernetes/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: LoadBalancer
  selector:
    app: bestcloudforme
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
