kubernetes/ingress-gke.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          serviceName: app-service
          servicePort: 5000
